--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -68,7 +68,7 @@
                     <a class="navbar-brand" href="#">BIBLIOTECA EGG</a>
                 </div>
                 <div class="container contenedorLibros">
-                    <p class="tituloLibros" th:if="${session.usuariosession != null}" th:text=" 'Hola de vuelta '+ ${session.usuariosession.nombre} "></p>
+                    <p class="tituloLibros" th:if="${session.usuariosession != null}" th:text=" 'Hola de vuelta '+ ${session.usuariosession.name} "></p>
                     <a class="btn btn-xl mt-2 boton">Ver Listado</a>
                 </div>
                 <div class="bg-circle-1 bg-circle"></div>
