--- a/src/main/resources/templates/usuario_modificar.html
+++ b/src/main/resources/templates/usuario_modificar.html
@@ -67,13 +67,13 @@
 
             <form class="formulario" th:action="@{/perfil/__${usuario.id}__}" method="POST" enctype="multipart/form-data">
 
-                <input hidden th:value="${id}" name="id">
+                <input hidden th:value="${usuario.id}" name="id">
 
                 <div class="form-group my-3">
                     <h3 class="card-title">Editar Usuario</h3>
                 </div>
                 <div class="form-group my-3">
-                    <input type="text" class="form-control" name="nombre"  th:value="${usuario.nombre}">
+                    <input type="text" class="form-control" name="nombre"  th:value="${usuario.name}">
                 </div>
                 <div class="form-group my-3">
                     <input type="email" class="form-control" name="email"  th:value="${usuario.email}">
