--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -14,6 +14,11 @@
                     <p class="tituloLibros" th:if="${session.usuariosession != null}" th:text=" 'Hola de vuelta '+ ${session.usuariosession.name} "></p>
                     <a class="btn btn-xl mt-2 boton">Ver Listado</a>
                 </div>
+                <div>
+                    <a class="d-flex align-items-center">
+                        <img class="logo" th:src="@{/image/perfil/__${session.usuariosession.id}__}" alt="Imagen Perfil">
+                    </a>
+                </div>
                 <div class="bg-circle-1 bg-circle"></div>
                 <div class="bg-circle-2 bg-circle"></div>
                 <div class="bg-circle-3 bg-circle"></div>
