--- a/src/main/resources/templates/usuario_modificar.html
+++ b/src/main/resources/templates/usuario_modificar.html
@@ -79,7 +79,7 @@
                     <input type="email" class="form-control" name="email"  th:value="${usuario.email}">
                 </div>
                 <div class="form-group my-3">
-                    <input type="file" class="form-control" name="archivo" >
+                    <input type="file" class="form-control" name="file" >
                 </div>
                 <div class="form-group my-3">
                     <input type="password" class="form-control" name="password" placeholder="PASSWORD">
