style: Translate every view to english

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,10 +20,10 @@
         <header class="header">
             <section class="contenedorMain">
                 <div class="tituloBiblioteca">
-                    <a class="navbar-brand" href="#">BIBLIOTECA EGG</a>
+                    <a class="navbar-brand" href="#">Library</a>
                 </div>
                 <div class="container contenedorLibros">
-                    <p class="tituloLibros">Encontrá todos los Libros Aquí!</p>
+                    <p class="tituloLibros">Find all your books here</p>
 
                 </div>
                 <div class="bg-circle-1 bg-circle"></div>
