--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -8,11 +8,11 @@
         <header class="header">
             <section class="contenedorMain">
                 <div class="tituloBiblioteca">
-                    <a class="navbar-brand" href="#">BIBLIOTECA EGG</a>
+                    <a class="navbar-brand" href="#">Library</a>
                 </div>
                 <div class="container contenedorLibros">
                     <p class="tituloLibros" th:if="${session.usuariosession != null}" th:text=" 'Hola de vuelta '+ ${session.usuariosession.name} "></p>
-                    <a class="btn btn-xl mt-2 boton">Ver Listado</a>
+                    <a class="btn btn-xl mt-2 boton">Book List</a>
                 </div>
                 <div>
                     <a class="d-flex align-items-center">
