--- a/src/main/resources/templates/libro_list.html
+++ b/src/main/resources/templates/libro_list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
         <meta charset="utf-8" >
-        <title>Biblioteca Egg</title>
+        <title>Library</title>
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/index.css">
@@ -36,7 +36,7 @@
                         <td th:text="${libro.author.name}"></td>
                         <td th:text="${libro.editorial.name}"></td>
                          <td>
-                            <a th:href= "@{/libro/modificar/__${libro.ISBN}__}"><i class="fas fa-feather-alt"></i> Modificar </a>
+                            <a th:href= "@{/libro/modificar/__${libro.ISBN}__}"><i class="fas fa-feather-alt"></i> Modify </a>
                         </td>
                     </tr>
 
@@ -59,7 +59,7 @@
             <section class="py-5 text-center container">
                 <div class="row py-lg-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
-                        <a th:href="@{/}" class="btn btn-primary my-2">Volver</a>
+                        <a th:href="@{/}" class="btn btn-primary my-2">Back</a>
                         </p>
                     </div>
                 </div>
