--- a/src/main/resources/templates/autor_list.html
+++ b/src/main/resources/templates/autor_list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
         <meta charset="utf-8" >
-        <title>Biblioteca Egg</title>
+        <title>Library</title>
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/index.css">
@@ -20,9 +20,9 @@
             <table class="table table-dark">
                 <thead>
                     <tr>
-                        <th scope="col">Id del Autor</th>
-                        <th scope="col">Nombre del Autor</th>
-                        <th scope="col">Acciones</th>
+                        <th scope="col">Id</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Actions</th>
 
                     </tr>
                 </thead>
@@ -31,7 +31,7 @@
                         <th scope="row" th:text="${autor.id}"></th>
                         <td th:text="${autor.name}"></td>
                         <td>
-                            <a th:href= "@{/autor/modificar/__${autor.id}__}"><i class="fas fa-feather-alt">  </i> Modificar </a>
+                            <a th:href= "@{/autor/modificar/__${autor.id}__}"><i class="fas fa-feather-alt">  </i> Modify </a>
                         </td>
 
                     </tr>
@@ -41,7 +41,7 @@
 
             <div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
                 <div class="card-body">
-                    <h5 class="card-title">Exito</h5>
+                    <h5 class="card-title">Success</h5>
                     <p class="card-text" th:text="${exito}"></p>
                 </div>
             </div>
@@ -55,7 +55,7 @@
             <section class="py-5 text-center container">
                 <div class="row py-lg-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
-                        <a th:href="@{/}" class="btn btn-primary my-2">Volver</a>
+                        <a th:href="@{/}" class="btn btn-primary my-2">Back</a>
                         </p>
                     </div>
                 </div>
