--- a/src/main/resources/templates/libro_modificar.html
+++ b/src/main/resources/templates/libro_modificar.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="ISO-8859-1">
-        <title>Modificar Libro</title>
+        <title>Modify Book</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/formulario.css">
     </head>
@@ -15,18 +15,18 @@
                 <input hidden th:value= "${isbn}" name="isbn">
 
                 <div class="form-group my-3">
-                    <label class="mb-2">Modificar Libro</label> 
+                    <label class="mb-2">Modify Book</label>
 
                     <input th:value="${libro.titulo}" type="text" class="form-control" name="titulo" placeholder="Titulo">
                 </div>
 
                 <div class="form-group my-3">
-                    <label class="mb-2">Ejemplares</label> 
+                    <label class="mb-2">Copies</label>
                     <input th:value="${libro.ejemplares}" type="number" class="form-control" name="ejemplares" placeholder="Cantidad de Ejemplares">
                 </div>
                 <div class="form-group my-3">
                     <select name="idAutor">
-                        <option>Seleccionar Autor</option>
+                        <option>Select Author</option>
                         <option th:each="autor : ${autores}"
                                 th:value="${autor.id}" 
                                 th:text="${autor.nombre}"
@@ -35,19 +35,19 @@
                 </div>
                 <div class="form-group my-3">
                     <select name="idEditorial">
-                        <option>Seleccionar Editorial</option>
+                        <option>Select Editorial</option>
                         <option th:each="editorial : ${editoriales}"
                                 th:value="${editorial.id}" 
                                 th:text="${editorial.nombre}"
                                 />
                     </select>
                 </div>
-                <button type="submit" class="btn btn-primary mt-3 botones">Actualizar</button>
+                <button type="submit" class="btn btn-primary mt-3 botones">Save</button>
             </form>
 
             <div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
                 <div class="card-body">
-                    <h5 class="card-title">Exito 👍</h5>
+                    <h5 class="card-title">Sucess</h5>
                     <p class="card-text" th:text="${exito}"></p>
                 </div>
             </div>
@@ -60,7 +60,7 @@
             <section class=" text-center container">
                 <div class="row mt-3">
                     <div class="divVolver">
-                        <a th:href="@{/}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+                        <a th:href="@{/}" class="btn btn-secondary my-2 botonVolver botones">Back</a>
                     </div>
                 </div>
             </section>
