--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
         <meta charset="utf-8" >
-        <title>Biblioteca Egg - Acceder</title>
+        <title>Library - Login</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/formulario.css">
     </head>
@@ -30,7 +30,7 @@
 
 
                 <div class="form-group my-3">
-                    <h3 class="card-title">Accede a la Biblioteca!</h3>
+                    <h3 class="card-title">Access to the Library!</h3>
                 </div>
 
                 <div class="form-group my-3">
@@ -42,14 +42,14 @@
                 </div>
 
 
-                <button type="submit" class="btn btn-primary mt-3 botones">Ingresar!</button>
+                <button type="submit" class="btn btn-primary mt-3 botones">Login!</button>
             </form>
 
 
             <section class=" text-center container">
                 <div class="row mt-3">
                     <div class="divVolver">
-                        <a th:href="@{/}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+                        <a th:href="@{/}" class="btn btn-secondary my-2 botonVolver botones">Back</a>
                     </div>
                 </div>
             </section>
