--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -16,7 +16,7 @@
             <ul class="navbar-nav ms-auto elementos">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" th:if="${session.usuariosession != null}" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Libros
+                        Books
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
@@ -95,10 +95,10 @@
         <header class="header">
             <section class="contenedorMain">
                 <div class="tituloBiblioteca">
-                    <a class="navbar-brand" href="#">BIBLIOTECA EGG</a>
+                    <a class="navbar-brand" href="#">Library</a>
                 </div>
                 <div class="container contenedorLibros">
-                    <p class="tituloLibros">Encontrá todos los Libros Aquí!</p>
+                    <p class="tituloLibros">You'll find every book here!</p>
                     <a class="btn btn-xl mt-2 boton">Ver Listado</a>
                 </div>
                 <div class="bg-circle-1 bg-circle"></div>
