--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="utf-8" >
-        <title>Biblioteca Egg - Registrate!</title>
+        <title>Library - Register!</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/formulario.css">
     </head>
@@ -12,13 +12,13 @@
 
         <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
             <div class="card-body">
-                <h5 class="card-title">Error!</h5>
+                <h5 class="card-title">Error</h5>
                 <p class="card-text" th:text="${error}"></p>
             </div>
         </div>
         <div th:if="${exito != null}" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
             <div class="card-body">
-                <h5 class="card-title">Exito!</h5>
+                <h5 class="card-title">Sucess</h5>
                 <p class="card-text" th:text="${exito}"></p>
             </div>
         </div>
@@ -28,7 +28,7 @@
             <form class="formulario" th:action="@{/registro}" method="POST" enctype="multipart/form-data">
 
                 <div class="form-group my-3">
-                    <h3 class="card-title">Registrate!</h3>
+                    <h3 class="card-title">Register</h3>
                 </div>
                 <div class="form-group my-3">
                     <input type="text" class="form-control" name="nombre" placeholder="NOMBRE" th:value="${nombre}">
@@ -47,14 +47,14 @@
                 </div>
 
 
-                <button type="submit" class="btn btn-primary mt-3 botones">Registrarme</button>
+                <button type="submit" class="btn btn-primary mt-3 botones">Register</button>
             </form>
 
 
             <section class=" text-center container">
                 <div class="row mt-3">
                     <div class="divVolver">
-                        <a th:href="@{/}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+                        <a th:href="@{/}" class="btn btn-secondary my-2 botonVolver botones">Back</a>
                     </div>
                 </div>
             </section>
