--- a/src/main/resources/templates/usuario_list.html
+++ b/src/main/resources/templates/usuario_list.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <head>
         <meta charset="utf-8" >
-        <title>Biblioteca Egg</title>
+        <title>Library</title>
         <link href="css/one-page-wonder.min.css" rel="stylesheet">
         <!-- CSS only -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -96,12 +96,12 @@
             <table class="table table-dark">
                 <thead class="align-items-center">
                     <tr >
-                        <th scope="col">Id del Usuario</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Foto de Perfil</th>
-                        <th scope="col">Rol</th>
-                        <th scope="col">Cambiar Rol</th>
-                        <th scope="col">Modificar</th>
+                        <th scope="col">User Id</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Photo</th>
+                        <th scope="col">Role</th>
+                        <th scope="col">Change Role</th>
+                        <th scope="col">Modify</th>
 
                     </tr>
                 </thead>
@@ -144,7 +144,7 @@
             <section class="py-5 text-center container">
                 <div class="row py-lg-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
-                        <a th:href="@{/admin/dashboard }" class="btn btn-primary my-2">Volver</a>
+                        <a th:href="@{/admin/dashboard }" class="btn btn-primary my-2">Back</a>
                         </p>
                     </div>
                 </div>
