--- a/src/main/resources/templates/usuario_modificar.html
+++ b/src/main/resources/templates/usuario_modificar.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="ISO-8859-1">
-        <title>Registro de Libros</title>
+        <title>Modify User</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/formulario.css">
     </head>
@@ -70,7 +70,7 @@
                 <input hidden th:value="${usuario.id}" name="id">
 
                 <div class="form-group my-3">
-                    <h3 class="card-title">Editar Usuario</h3>
+                    <h3 class="card-title">Edit User</h3>
                 </div>
                 <div class="form-group my-3">
                     <input type="text" class="form-control" name="nombre"  th:value="${usuario.name}">
@@ -89,14 +89,14 @@
                 </div>
 
 
-                <button type="submit" class="btn btn-primary mt-3 botones">Actualizar</button>
+                <button type="submit" class="btn btn-primary mt-3 botones">Save</button>
             </form>
 
 
             <section class=" text-center container">
                 <div class="row mt-3">
                     <div class="divVolver">
-                        <a th:href="@{/inicio}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
+                        <a th:href="@{/inicio}" class="btn btn-secondary my-2 botonVolver botones">Back</a>
                     </div>
                 </div>
             </section>
