refactor(all views): insert statusCard fragment

--- a/src/main/resources/templates/editorial_list.html
+++ b/src/main/resources/templates/editorial_list.html
@@ -39,17 +39,8 @@
                 </tbody>
             </table>
 
-            <div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
-                <div class="card-body">
-                    <h5 class="card-title">Success</h5>
-                    <p class="card-text" th:text="${exito}"></p>
-                </div>
-            </div>
-            <div th:if="${error}!=null" class="card text-white bg-danger mb-3 mensajeError" >
-                <div class="card-body">
-                    <h5 class="card-title">Error</h5>
-                    <p class="card-text" th:text="${error}"></p>
-                </div>
+            <div th:replace="~{/fragments/statusCard.html}"></div>
+
             </div>
 
             <section class="py-5 text-center container">
