--- a/src/main/resources/templates/editorial_form.html
+++ b/src/main/resources/templates/editorial_form.html
@@ -20,18 +20,8 @@
                 <button type="submit" class="btn btn-primary mt-3 botones">Save</button>
             </form>
 
-            <div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
-                <div class="card-body">
-                    <h5 class="card-title">Sucess</h5>
-                    <p class="card-text" th:text="${exito}"></p>
-                </div>
-            </div>
-            <div th:if="${error}!=null" class="card text-white bg-danger mb-3 mensajeError" >
-                <div class="card-body">
-                    <h5 class="card-title">Error</h5>
-                    <p class="card-text" th:text="${error}"></p>
-                </div>
-            </div>
+            <div th:replace="~{/fragments/statusCard.html}"></div>
+
             <section class=" text-center container">
                 <div class="row mt-3">
                     <div class="divVolver">
