--- a/src/main/resources/templates/libro_form.html
+++ b/src/main/resources/templates/libro_form.html
@@ -14,19 +14,8 @@
         <div class="container-fluid m-5 contenedor">
 
             <form class="formulario" action="/libro/registro" method="POST">
-                
-                <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
-                    <div class="card-body">
-                        <h5 class="card-title">Error</h5>
-                        <p class="card-text" th:text="${error}"></p>
-                    </div>
-                </div>
-                <div th:if="${exito != null}" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
-                    <div class="card-body">
-                        <h5 class="card-title">Sucess</h5>
-                        <p class="card-text" th:text="${exito}"></p>
-                    </div>
-                </div>
+
+                <div th:replace="~{/fragments/statusCard.html}"></div>
 
                 <div class="form-group my-3">
                     <label class="mb-2">Fill out the Book information:</label>
