--- a/src/main/resources/templates/libro_list.html
+++ b/src/main/resources/templates/libro_list.html
@@ -42,19 +42,8 @@
 
                 </tbody>
             </table>
-            
-              <div th:if="${exito}!=null" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
-                <div class="card-body">
-                    <h5 class="card-title">Exito</h5>
-                    <p class="card-text" th:text="${exito}"></p>
-                </div>
-            </div>
-            <div th:if="${error}!=null" class="card text-white bg-danger mb-3 mensajeError" >
-                <div class="card-body">
-                    <h5 class="card-title">Error ð</h5>
-                    <p class="card-text" th:text="${error}"></p>
-                </div>
-            </div>
+
+            <div th:replace="~{/fragments/statusCard.html}"></div>
 
             <section class="py-5 text-center container">
                 <div class="row py-lg-5">
