--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -10,18 +10,7 @@
 
     <nav th:replace="~{/fragments/navbar.html :: nav}"></nav>
 
-        <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
-            <div class="card-body">
-                <h5 class="card-title">Error</h5>
-                <p class="card-text" th:text="${error}"></p>
-            </div>
-        </div>
-        <div th:if="${exito != null}" class="card text-white bg-success mb-3 mt-3 mensajeExito" >
-            <div class="card-body">
-                <h5 class="card-title">Sucess</h5>
-                <p class="card-text" th:text="${exito}"></p>
-            </div>
-        </div>
+    <div th:replace="~{/fragments/statusCard.html}"></div>
 
         <div class="container-fluid m-5 contenedor">
 
