--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -17,16 +17,15 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                    <li><a class="dropdown-item" sec:authorize="hasAuthority('ADMIN')" th:href="@{/libro/registrar}">Create
+                    <li><a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/libro/registrar}">Create
                         Book</a></li>
                     <li>
-                        <hr class="dropdown-divider">
+                        <hr class="dropdown-divider" sec:authorize="hasRole('ADMIN')">
                     </li>
 
                     <li><a class="dropdown-item" th:href="@{/libro/lista}">Book List</a></li>
                 </ul>
             </li>
-
 
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" th:if="${session.usuariosession != null}" href=""
@@ -35,16 +34,15 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                    <li><a class="dropdown-item" sec:authorize="hasAuthority('ADMIN')" th:href="@{/autor/registrar}">Create
+                    <li><a class="dropdown-item" sec:authorize="hasRole('ADMIN')" th:href="@{/autor/registrar}">Create
                         Author</a></li>
                     <li>
-                        <hr class="dropdown-divider">
+                        <hr class="dropdown-divider" sec:authorize="hasRole('ADMIN')">
                     </li>
 
                     <li><a class="dropdown-item" th:href="@{/autor/lista}">Author List</a></li>
                 </ul>
             </li>
-
 
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" th:if="${session.usuariosession != null}" href="#"
@@ -53,27 +51,45 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                    <li><a class="dropdown-item" sec:authorize="hasAuthority('ADMIN')"
+                    <li><a class="dropdown-item" sec:authorize="hasRole('ADMIN')"
                            th:href="@{/editorial/registrar}">Create Editorial</a></li>
                     <li>
-                        <hr class="dropdown-divider">
+                        <hr class="dropdown-divider" sec:authorize="hasRole('ADMIN')">
                     </li>
 
                     <li><a class="dropdown-item" th:href="@{/editorial/lista}">Editorials List</a></li>
                 </ul>
             </li>
+
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                <a class="nav-link dropdown-toggle" th:if="${session.usuariosession != null}" href="#"
+                   id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Usuarios
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+                    <li><a class="dropdown-item" th:href="@{/admin/usuarios}">Listar Usuarios</a></li>
+                </ul>
+            </li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" th:if="${session.usuariosession != null}" href="#"
+                   id="navbarDropdown" role="button" data-bs-toggle="dropdown"
                    aria-expanded="false">
                     Profile
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="/perfil">Edit</a></li>
-                </ul>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                    <li><hr class="dropdown-divider" sec:authorize="hasRole('ADMIN')"></li>
+                    <li>
+                        <a class="dropdown-item"
+                           th:if="${session.usuariosession != null}"
+                           th:href="@{/logout}">Logout
+                        </a>
+                    </li>
                 </ul>
             </li>
+
 
             <li class="nav-item">
                 <a class="nav-link " th:if="${session.usuariosession == null}" href="/registrar" id="navbarDropdown"
