--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -68,7 +68,7 @@
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 
-                    <li><a class="dropdown-item" th:href="@{/admin/usuarios}">Listar Usuarios</a></li>
+                    <li><a class="dropdown-item" th:href="@{/admin/usuarios}">Usuarios List</a></li>
                 </ul>
             </li>
 
