--- a/src/main/resources/templates/usuario_list.html
+++ b/src/main/resources/templates/usuario_list.html
@@ -133,8 +133,7 @@
             <section class="py-5 text-center container">
                 <div class="row py-lg-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
-                        <a th:href="@{/admin/dashboard }" class="btn btn-primary my-2">Back</a>
-                        </p>
+                        <a th:href="@{/inicio}" class="btn btn-primary my-2">Back</a>
                     </div>
                 </div>
             </section>
